--- a/hadrian/pom.xml
+++ b/hadrian/pom.xml
@@ -12,7 +12,7 @@
 
   <licenses>
     <license>
-      <name>Hadrian Personal Use and Educational License (PUEL)</name>
+      <name>Hadrian Personal Use and Evaluation License (PUEL)</name>
       <url>http://raw.githubusercontent.com/opendatagroup/hadrian/master/LICENSE</url>
       <distribution>repo</distribution>
     </license>
