actually make the pom's version number 0.5

--- a/hadrian/pom.xml
+++ b/hadrian/pom.xml
@@ -27,7 +27,7 @@ limitations under the License.
 
   <groupId>com.opendatagroup</groupId>
   <artifactId>hadrian</artifactId>
-  <version>TRUNK</version>
+  <version>0.5</version>
   <packaging>jar</packaging>
 
   <licenses>
