--- a/hadrian-gae/hadrian-gae-war/pom.xml
+++ b/hadrian-gae/hadrian-gae-war/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>com.opendatagroup</groupId>
       <artifactId>hadrian</artifactId>
-      <version>0.5</version>
+      <version>TRUNK</version>
     </dependency>
 
     <dependency>
