--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -1,9 +1,13 @@
 Package: aurelius
 Type: Package
 Title: Generates PFA documents from R code and optionally runs them.
-Version: 0.0
-Date: DATE_STAMP
+Version: 0.8.3
+Date: 2016-01-19
 Author: Open Data
-Maintainer: Jim Pivarski <jim.pivarski@opendatagroup.com>
-Description: Converts R syntax into PFA and provides tools for assembling a PFA document within R. Tests validity and runtime behavior of PFA by offloading PFA and data to Titus (through rPython). Facilitates conversion of common R model output to PFA using aurelius.* libraries.
+Maintainer: Open Data Group <info@opendatagroup.com>
+Description: Converts R syntax into PFA and provides tools for assembling a PFA
+    document within R. Tests validity and runtime behavior of PFA by offloading
+    PFA and data to Titus (through rPython). Facilitates conversion of common R
+    model output to PFA using aurelius.* libraries.
 License: Hadrian Personal Use and Evaluation License (PUEL)
+RoxygenNote: 5.0.1
