--- a/hadrian-gae/pom.xml
+++ b/hadrian-gae/pom.xml
@@ -3,14 +3,14 @@
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
-    <version>0.8.1</version>
+    <version>0.8.3</version>
 
     <groupId>com.opendatagroup</groupId>
     <artifactId>hadrian-gae</artifactId>
 
     <properties>
         <app.id>hadrian-gae</app.id>
-        <app.version>TRUNK</app.version>  <!-- has to use dashes, like 0-8-1, not dots -->
+        <app.version>0-8-3</app.version>  <!-- has to use dashes, like 0-8-1, not dots -->
         <appengine.version>1.9.28</appengine.version>
         <gcloud.plugin.version>2.0.9.74.v20150814</gcloud.plugin.version>
         <scala.tools.version>2.10</scala.tools.version>
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>com.opendatagroup</groupId>
             <artifactId>hadrian</artifactId>
-            <version>0.8.1</version>
+            <version>0.8.3</version>
         </dependency>
 
         <dependency>
