moving scala projects to new version.  The convention will be x.y.z-post where x.y.z is the latest release of the hadrian suite

--- a/antinous/pom.xml
+++ b/antinous/pom.xml
@@ -27,7 +27,7 @@ limitations under the License.
 
   <groupId>com.opendatagroup</groupId>
   <artifactId>antinous</artifactId>
-  <version>0.8.3</version>
+  <version>0.8.3-post</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -51,7 +51,7 @@ limitations under the License.
     <dependency>
       <groupId>com.opendatagroup</groupId>
       <artifactId>hadrian</artifactId>
-      <version>0.8.3</version>
+      <version>0.8.3-post</version>
     </dependency>
 
     <dependency>
