--- a/hadrian-actors/pom.xml
+++ b/hadrian-actors/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.opendatagroup</groupId>
   <artifactId>hadrian-actors</artifactId>
-  <version>0.8.3</version>
+  <version>0.0.0</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>com.opendatagroup</groupId>
       <artifactId>hadrian</artifactId>
-      <version>0.8.3</version>
+      <version>0.8.3-post</version>
     </dependency>
 
     <dependency>
