--- a/hadrian/pom.xml
+++ b/hadrian/pom.xml
@@ -4,12 +4,11 @@ one or more of the following companies: Open Data Partners LLC,
 Open Data Research LLC, or Open Data Capital LLC.)
 
 This file is part of Hadrian.
-
-Licensed under the Hadrian Personal Use and Evaluation License (PUEL);
+Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
-    http://raw.githubusercontent.com/opendatagroup/hadrian/master/LICENSE
+   http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
@@ -32,8 +31,8 @@ limitations under the License.
 
   <licenses>
     <license>
-      <name>Hadrian Personal Use and Evaluation License (PUEL)</name>
-      <url>http://raw.githubusercontent.com/opendatagroup/hadrian/master/LICENSE</url>
+      <name>Apache License</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
