--- a/hadrian-performance-tests/hadrian-performance-functions/pom.xml
+++ b/hadrian-performance-tests/hadrian-performance-functions/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.opendatagroup</groupId>
   <artifactId>hadrian-performance-functions</artifactId>
-  <version>TRUNK</version>
+  <version>0.8.3-post</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>com.opendatagroup</groupId>
       <artifactId>hadrian</artifactId>
-      <version>TRUNK</version>
+      <version>0.8.3-post</version>
     </dependency>
 
   </dependencies>
