aurelius 0.8.4 work for the new license and inclusion with cran is still under development.  Updating version in DESCRIPTION to have a beta tag

--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: aurelius
 Type: Package
 Title: Generates PFA documents from R code and optionally runs them.
-Version: 0.8.4
+Version: 0.8.4-beta
 Date: 2016-04-05
 Author: Open Data
 Maintainer: Open Data Group <info@opendatagroup.com>
