--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -1,13 +1,17 @@
 Package: aurelius
 Type: Package
-Title: Generates PFA documents from R code and optionally runs them.
+Title: Generates PFA Documents from R Code and Optionally Runs Them
 Version: 0.0
 Date: TODAY
-Author: Open Data
-Maintainer: Open Data Group <info@opendatagroup.com>
+Author: Open Data Group[aut]
+Maintainer: Collin Bennett <collin.bennett@opendatagroup.com>
 Description: Converts R syntax into PFA and provides tools for assembling a PFA
     document within R. Tests validity and runtime behavior of PFA by offloading
     PFA and data to Titus (through rPython). Facilitates conversion of common R
-    model output to PFA using aurelius.* libraries.
-License: Apache-2.0
+    model output to PFA using aurelius.* libraries.  Aurelius is part of 
+    Hadrian and is on Github at <https://github.com/opendatagroup/hadrian>.
+License: file LICENSE
 RoxygenNote: 5.0.1
+NeedsCompilation: no
+Packaged: 2016-04-06 17:13:42 UTC
+Depends: RJSONIO, rPython, gbm, glmnet, randomForest
