--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -42,3 +42,7 @@ export(uniqueFixedName)
 export(uniqueRecordName)
 export(uniqueSymbolName)
 export(unjson)
+import(RJSONIO)
+import(gbm)
+import(rPython)
+import(survival)
