--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -44,5 +44,6 @@ export(uniqueSymbolName)
 export(unjson)
 import(RJSONIO)
 import(gbm)
+import(glmnet)
 import(rPython)
-import(survival)
+import(randomForest)
