documentation fix for check --as-cran

--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -42,3 +42,8 @@ export(uniqueFixedName)
 export(uniqueRecordName)
 export(uniqueSymbolName)
 export(unjson)
+import(RJSONIO)
+import(gbm)
+import(glmnet)
+import(rPython)
+import(randomForest)
