--- a/hadrian/pom.xml
+++ b/hadrian/pom.xml
@@ -26,7 +26,7 @@ limitations under the License.
 
   <groupId>com.opendatagroup</groupId>
   <artifactId>hadrian</artifactId>
-  <version>0.8.4</version>
+  <version>0.8.4-scala2.11</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -48,10 +48,10 @@ limitations under the License.
   </reporting>
 
   <properties>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-    <scala.tools.version>2.10</scala.tools.version>
-    <scala.version>2.10.4</scala.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <scala.tools.version>2.11</scala.tools.version>
+    <scala.version>2.11.7</scala.version>
     <encoding>UTF-8</encoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -143,7 +143,7 @@ limitations under the License.
 
     <dependency>
         <groupId>com.thesamet</groupId>
-        <artifactId>kdtree_2.10</artifactId>
+        <artifactId>kdtree_2.11</artifactId>
         <version>1.0.3</version>
     </dependency>
 
@@ -156,10 +156,26 @@ limitations under the License.
 
     <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_2.10</artifactId>
-      <version>2.0.M6-SNAP36</version>
+      <artifactId>scalatest_2.11</artifactId>
+      <version>2.2.5</version>
       <scope>test</scope>
     </dependency>
+
+<dependency>
+  <groupId>org.scala-lang.modules</groupId>
+  <artifactId>scala-xml_2.11</artifactId>
+  <version>1.0.3</version>
+</dependency>
+<dependency>
+  <groupId>org.scala-lang.modules</groupId>
+  <artifactId>scala-parser-combinators_2.11</artifactId>
+  <version>1.0.3</version>
+</dependency>
+<dependency>
+  <groupId>org.scala-lang.modules</groupId>
+  <artifactId>scala-swing_2.11</artifactId>
+  <version>1.0.1</version>
+</dependency>
 
   </dependencies>
 
@@ -173,7 +189,7 @@ limitations under the License.
         <!-- see http://davidb.github.com/scala-maven-plugin -->
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.1.3</version>
+        <version>3.2.2</version>
         <executions>
           <execution>
             <goals>
