--- a/hadrian/pom.xml
+++ b/hadrian/pom.xml
@@ -31,8 +31,8 @@ limitations under the License.
 
   <licenses>
     <license>
-      <name>Hadrian Personal Use and Evaluation License (PUEL)</name>
-      <url>http://raw.githubusercontent.com/opendatagroup/hadrian/master/LICENSE</url>
+      <name>Apache 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
