--- a/hadrian/pom.xml
+++ b/hadrian/pom.xml
@@ -26,13 +26,13 @@ limitations under the License.
 
   <groupId>com.opendatagroup</groupId>
   <artifactId>hadrian</artifactId>
-  <version>0.8.4-post</version>
+  <version>0.8.5</version>
   <packaging>jar</packaging>
 
   <licenses>
     <license>
-      <name>Apache License</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <name>Apache 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -48,10 +48,10 @@ limitations under the License.
   </reporting>
 
   <properties>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-    <scala.tools.version>2.10</scala.tools.version>
-    <scala.version>2.10.4</scala.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <scala.tools.version>2.11</scala.tools.version>
+    <scala.version>2.11.5</scala.version>
     <encoding>UTF-8</encoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -120,7 +120,7 @@ limitations under the License.
     <dependency>
         <groupId>com.googlecode.efficient-java-matrix-library</groupId>
         <artifactId>ejml</artifactId>
-        <version>0.25</version>
+        <version>0.24</version>
     </dependency>
 
     <dependency>
@@ -143,7 +143,7 @@ limitations under the License.
 
     <dependency>
         <groupId>com.thesamet</groupId>
-        <artifactId>kdtree_2.10</artifactId>
+        <artifactId>kdtree_2.11</artifactId>
         <version>1.0.3</version>
     </dependency>
 
@@ -156,10 +156,30 @@ limitations under the License.
 
     <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_2.10</artifactId>
-      <version>2.0.M6-SNAP36</version>
+      <artifactId>scalatest_2.11</artifactId>
+      <version>2.2.5</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-xml_2.11</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+<!--
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-parser-combinators_2.11</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-swing_2.11</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+-->
+
 
   </dependencies>
 
@@ -173,7 +193,7 @@ limitations under the License.
         <!-- see http://davidb.github.com/scala-maven-plugin -->
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.1.3</version>
+        <version>3.2.2</version>
         <executions>
           <execution>
             <goals>
@@ -186,7 +206,6 @@ limitations under the License.
                 <arg>-deprecation</arg>
                 <arg>-feature</arg>
                 <arg>-unchecked</arg>
-                <!-- <arg>-make:transitive</arg>   (is an unsupported option) -->
                 <arg>-dependencyfile</arg>
                 <arg>${project.build.directory}/.scala_dependencies</arg>
               </args>
