Move .travis.yml to top level dir
Move travis file because it's required to be at the top level of the repository

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ notifications:
     on_failure: change
     
 #before_script
-before_script:
+before_script: cd aurelius
   
 #after_success
 after_success:
@@ -47,4 +47,4 @@ r_packages:
 services:
 
 #before_install
-before_install: cd aurelius
+before_install: 
