--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -14,4 +14,5 @@ License: file LICENSE
 RoxygenNote: 5.0.1
 NeedsCompilation: no
 Packaged: 2016-04-06 17:13:42 UTC
+Imports: methods, utils, stats
 Depends: RJSONIO, rPython, gbm, glmnet, randomForest
