--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -2,32 +2,32 @@
 
 S3method(pfa,glm)
 S3method(pfa,lm)
-export(avro.array)
-export(avro.boolean)
-export(avro.bytes)
-export(avro.double)
-export(avro.enum)
-export(avro.fixed)
-export(avro.float)
-export(avro.fromFrame)
-export(avro.fullName)
-export(avro.int)
-export(avro.long)
-export(avro.map)
-export(avro.null)
-export(avro.record)
-export(avro.string)
-export(avro.type)
-export(avro.typemap)
-export(avro.union)
-export(json)
-export(json.array)
-export(json.map)
+export(avro_array)
+export(avro_boolean)
+export(avro_bytes)
+export(avro_double)
+export(avro_enum)
+export(avro_fixed)
+export(avro_float)
+export(avro_from_df)
+export(avro_fullname)
+export(avro_int)
+export(avro_long)
+export(avro_map)
+export(avro_null)
+export(avro_record)
+export(avro_string)
+export(avro_type)
+export(avro_typemap)
+export(avro_union)
+export(json_array)
+export(json_map)
+export(make_unique_eng_name)
+export(make_unique_enum_name)
+export(make_unique_fixed_name)
+export(make_unique_rec_name)
+export(make_unique_symb_name)
 export(pfa)
-export(pfa.cell)
-export(pfa.config)
-export(pfa.engine)
-export(pfa.expr)
 export(pfa.gbm.buildOneTree)
 export(pfa.gbm.extractTree)
 export(pfa.glm.extractParams)
@@ -36,17 +36,17 @@ export(pfa.glmnet.inputType)
 export(pfa.glmnet.modelParams)
 export(pfa.glmnet.predictProb)
 export(pfa.glmnet.regressionType)
-export(pfa.pool)
 export(pfa.randomForest.buildOneTree)
 export(pfa.randomForest.extractTree)
-export(uniqueEngineName)
-export(uniqueEnumName)
-export(uniqueFixedName)
-export(uniqueRecordName)
-export(uniqueSymbolName)
-export(unjson)
-import(RJSONIO)
-import(gbm)
+export(pfa_cell)
+export(pfa_document)
+export(pfa_engine)
+export(pfa_expr)
+export(pfa_pool)
+export(read_pfa)
+export(write_pfa)
 import(glmnet)
-import(rPython)
 import(randomForest)
+importFrom(jsonlite,toJSON)
+importFrom(rPython,python.call)
+importFrom(rPython,python.exec)
