Add missing gbm function to NAMESPACE

--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -48,6 +48,7 @@ export(pfa_expr)
 export(pfa_pool)
 export(read_pfa)
 export(write_pfa)
+importFrom(gbm,pretty.gbm.tree)
 importFrom(jsonlite,toJSON)
 importFrom(rPython,python.call)
 importFrom(rPython,python.exec)
