Move Cutoff Function
Move the cutoff function out of gbm-related functions so that other functions in the package can access in a consistent way.

--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -38,7 +38,6 @@ Collate:
     'avro_type.R'
     'avro_typemap.R'
     'converters.R'
-    'pfa_expr.R'
     'gbm.R'
     'gen_unique_name.R'
     'glm.R'
@@ -49,6 +48,8 @@ Collate:
     'pfa_cellpool.R'
     'pfa_document.R'
     'pfa_engine.R'
+    'pfa_expr.R'
+    'pfa_utils.R'
     'randomForest.R'
     'read_pfa.R'
     'write_pfa.R'
