--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -18,9 +18,7 @@ Depends:
 Imports:
     jsonlite (>= 1.1),
     rPython (>= 0.0-6),
-    gbm (>= 2.1.1),
-    glmnet (>= 2.0-5),
-    randomForest (>= 4.6-12)
+    gbm (>= 2.1.1)
 Suggests:
     knitr,
     rmarkdown,
