--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -49,6 +49,12 @@ export(pfa_pool)
 export(read_pfa)
 export(write_pfa)
 importFrom(gbm,pretty.gbm.tree)
+importFrom(glmnet,coef)
 importFrom(jsonlite,toJSON)
+importFrom(methods,is)
 importFrom(rPython,python.call)
 importFrom(rPython,python.exec)
+importFrom(stats,gaussian)
+importFrom(stats,setNames)
+importFrom(utils,capture.output)
+importFrom(utils,tail)
