Fix Coef Function Export

--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -49,7 +49,7 @@ export(pfa_pool)
 export(read_pfa)
 export(write_pfa)
 importFrom(gbm,pretty.gbm.tree)
-importFrom(glmnet,coef)
+importFrom(glmnet,coef.glmnet)
 importFrom(jsonlite,toJSON)
 importFrom(methods,is)
 importFrom(rPython,python.call)
