Fix Failing Test Cases

--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(jsonlite,toJSON)
 importFrom(methods,is)
 importFrom(rPython,python.call)
 importFrom(rPython,python.exec)
+importFrom(stats,coef)
 importFrom(stats,gaussian)
 importFrom(stats,setNames)
 importFrom(utils,capture.output)
