Add Support For K-Centroid Models

--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -43,6 +43,9 @@ Collate:
     'glm.R'
     'glmnet.R'
     'jsonobj.R'
+    'pfa_expr.R'
+    'kcca.R'
+    'kmeans.R'
     'lda.R'
     'lm.R'
     'naiveBayes.R'
@@ -50,7 +53,6 @@ Collate:
     'pfa_cellpool.R'
     'pfa_document.R'
     'pfa_engine.R'
-    'pfa_expr.R'
     'pfa_utils.R'
     'randomForest.R'
     'read_pfa.R'
