--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -8,6 +8,9 @@ S3method(extract_params,cv.glmnet)
 S3method(extract_params,gbm)
 S3method(extract_params,glm)
 S3method(extract_params,glmnet)
+S3method(extract_params,kcca)
+S3method(extract_params,kccasimple)
+S3method(extract_params,kmeans)
 S3method(extract_params,lda)
 S3method(extract_params,naiveBayes)
 S3method(extract_params,randomForest)
@@ -15,6 +18,9 @@ S3method(pfa,cv.glmnet)
 S3method(pfa,gbm)
 S3method(pfa,glm)
 S3method(pfa,glmnet)
+S3method(pfa,kcca)
+S3method(pfa,kccasimple)
+S3method(pfa,kmeans)
 S3method(pfa,lda)
 S3method(pfa,lm)
 S3method(pfa,naiveBayes)
