--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -6,6 +6,7 @@ S3method(build_model,naiveBayes)
 S3method(build_model,randomForest)
 S3method(extract_params,HoltWinters)
 S3method(extract_params,cv.glmnet)
+S3method(extract_params,ets)
 S3method(extract_params,gbm)
 S3method(extract_params,glm)
 S3method(extract_params,glmnet)
@@ -20,6 +21,7 @@ S3method(extract_params,naiveBayes)
 S3method(extract_params,randomForest)
 S3method(pfa,HoltWinters)
 S3method(pfa,cv.glmnet)
+S3method(pfa,ets)
 S3method(pfa,gbm)
 S3method(pfa,glm)
 S3method(pfa,glmnet)
