--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -4,6 +4,7 @@ S3method(build_model,gbm)
 S3method(build_model,lda)
 S3method(build_model,naiveBayes)
 S3method(build_model,randomForest)
+S3method(extract_params,Arima)
 S3method(extract_params,HoltWinters)
 S3method(extract_params,cv.glmnet)
 S3method(extract_params,ets)
@@ -19,6 +20,7 @@ S3method(extract_params,knnreg)
 S3method(extract_params,lda)
 S3method(extract_params,naiveBayes)
 S3method(extract_params,randomForest)
+S3method(pfa,Arima)
 S3method(pfa,HoltWinters)
 S3method(pfa,cv.glmnet)
 S3method(pfa,ets)
