Add Support for Objects of Class "forecast"
Add support via pass-through for objects of class forecast because they have a model object inside that can be converted via other S3 methods already created.

--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -47,6 +47,7 @@ Collate:
     'avro_typemap.R'
     'converters.R'
     'ets.R'
+    'forecast.R'
     'gbm.R'
     'gen_unique_name.R'
     'glm.R'
