--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -8,6 +8,7 @@ S3method(extract_params,Arima)
 S3method(extract_params,HoltWinters)
 S3method(extract_params,cv.glmnet)
 S3method(extract_params,ets)
+S3method(extract_params,forecast)
 S3method(extract_params,gbm)
 S3method(extract_params,glm)
 S3method(extract_params,glmnet)
@@ -24,6 +25,7 @@ S3method(pfa,Arima)
 S3method(pfa,HoltWinters)
 S3method(pfa,cv.glmnet)
 S3method(pfa,ets)
+S3method(pfa,forecast)
 S3method(pfa,gbm)
 S3method(pfa,glm)
 S3method(pfa,glmnet)
