Add Untested rpart Functionality
Add untested functionality for CART models created using the rpart function in the rpart package.

--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -4,6 +4,7 @@ S3method(build_model,gbm)
 S3method(build_model,lda)
 S3method(build_model,naiveBayes)
 S3method(build_model,randomForest)
+S3method(build_model,rpart)
 S3method(extract_params,Arima)
 S3method(extract_params,HoltWinters)
 S3method(extract_params,cv.glmnet)
@@ -21,6 +22,7 @@ S3method(extract_params,knnreg)
 S3method(extract_params,lda)
 S3method(extract_params,naiveBayes)
 S3method(extract_params,randomForest)
+S3method(extract_params,rpart)
 S3method(pfa,Arima)
 S3method(pfa,HoltWinters)
 S3method(pfa,cv.glmnet)
@@ -39,6 +41,7 @@ S3method(pfa,lda)
 S3method(pfa,lm)
 S3method(pfa,naiveBayes)
 S3method(pfa,randomForest)
+S3method(pfa,rpart)
 export(avro_array)
 export(avro_boolean)
 export(avro_bytes)
